--- a/client/src/app/layout/style.css
+++ b/client/src/app/layout/style.css
@@ -14,3 +14,16 @@ input,
   border-radius: 0 !important;
   height: 40px !important;
 }
+
+.ui.card{
+  border-radius: 0;
+}
+
+.slider {
+  position: absolute; 
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 100%;
+}
