--- a/client/src/app/layout/style.css
+++ b/client/src/app/layout/style.css
@@ -53,3 +53,7 @@ input,
 .ui.borderless.fluid.vertical.left.fixed.menu {
   background-color: #1a1c23;
 }
+
+.rs-drawer-content {
+  background: #1a1c23;
+}
